--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -1,20 +1,26 @@
-name: Generate Snake
+name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 */24 * * *"
+    - cron: "0 0 * * *"  # every day at midnight
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@master
+      - name: Generate GitHub Contribution Snake
+        uses: Platane/snk@master
         with:
           github_user_name: lakshitaa4
           outputs: |
-            ./output/github-contribution-grid-snake-dark.svg
-      - name: Push to GitHub
+            ./dist/github-contribution-grid-snake.svg
+            ./dist/github-contribution-grid-snake-dark.svg
+
+      - name: Push generated files
         uses: EndBug/add-and-commit@v9
         with:
-          message: "Generate Snake Contribution Graph"
+          author_name: github-actions
+          author_email: github-actions@github.com
+          message: "Generate Contribution Snake"
+          add: "./dist/*"
