--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,25 +1,36 @@
-name: Generate Snake Animation
+name: Generate Snake SVG
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   generate-snake:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # Check out the code
+      - name: Checkout repository
         uses: actions/checkout@v2
+
+      # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'  # or the version you need
+
+      # Install dependencies (if you have any)
       - name: Install dependencies
         run: npm install
+
+      # Run the generate-snake script
       - name: Generate Snake SVG
         run: npm run generate-snake
-      - name: Commit and push generated SVG
-        run: git add dist/* && git commit -m "Add snake animation" && git push
+
+      # Optionally, you can upload the generated SVG or store it as an artifact
+      - name: Upload Snake SVG as Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: snake-svg
+          path: snake.svg
